WPFClient now removes all files from db table Index. Not implemented using MVVM design pattern, but by using code behind. Also changed sql command text in RemoveAll method in Service1.svc.cs

--- a/WPFClient/MainWindow.xaml
+++ b/WPFClient/MainWindow.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:WPFClient"
         xmlns:ViewModels="clr-namespace:WPFClient.ViewModels" x:Class="WPFClient.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        Title="MainWindow" Height="350" Width="525"
+        Closing="MainWindow_OnClosing">
+    <Grid Name="TheGrid">
         <Grid.DataContext>
             <ViewModels:MainWindowViewModel/>
         </Grid.DataContext>
